Added 3 more tutorials.

--- a/Tutorial_0/.vscode/settings.json
+++ b/Tutorial_0/.vscode/settings.json
@@ -25,6 +25,7 @@
         "polygonmode": "cpp",
         "stateattribute": "cpp",
         "cullface": "cpp",
-        "stateset": "cpp"
+        "stateset": "cpp",
+        "fog": "cpp"
     }
 }
