--- a/Tutorial_0/CMakeLists.txt
+++ b/Tutorial_0/CMakeLists.txt
@@ -28,5 +28,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE osg)
 target_link_libraries(${PROJECT_NAME} PRIVATE osgDB)
 target_link_libraries(${PROJECT_NAME} PRIVATE osgUtil)
 target_link_libraries(${PROJECT_NAME} PRIVATE osgViewer)
+target_link_libraries(${PROJECT_NAME} PRIVATE osgGA)
 target_link_libraries(${PROJECT_NAME} PRIVATE glut)
 target_link_libraries(${PROJECT_NAME} PRIVATE GL)
