Implementing event handling tutorial program.

--- a/Tutorial_0/.vscode/settings.json
+++ b/Tutorial_0/.vscode/settings.json
@@ -119,6 +119,9 @@
         "switch": "cpp",
         "valuemap": "cpp",
         "guieventhandler": "cpp",
-        "eventhandler": "cpp"
+        "eventhandler": "cpp",
+        "cameramanipulator": "cpp",
+        "earthmanipulator": "cpp",
+        "viewpoint": "cpp"
     }
 }
